chore: deprecate neocmake-lsp-vscode (#803)
Co-authored-by: ShootingStarDragons <aakari@tutanota.com>

--- a/extension-control/extensions.json
+++ b/extension-control/extensions.json
@@ -36,6 +36,13 @@
         }
     ],
     "deprecated": {
+        "decodetalkers.neocmake-lsp-vscode": {
+            "disallowInstall": false,
+            "extension": {
+              "id": "decodetalkers.neocmakelsp-vscode",
+              "displayName": "CMake Language"
+            }
+        },
         "msjsdiag.debugger-for-chrome": {
             "disallowInstall": true,
             "extension": {
