Add `tonybaloney.vscode-pets` (#808)

--- a/extensions.json
+++ b/extensions.json
@@ -1387,6 +1387,9 @@
   "tonsky.theme-alabaster": {
     "repository": "https://github.com/tonsky/vscode-theme-alabaster"
   },
+  "tonybaloney.vscode-pets": {
+    "repository": "https://github.com/tonybaloney/vscode-pets"
+  },
   "torn4dom4n.latex-support": {
     "repository": "https://github.com/AREA44/vscode-LaTeX-support"
   },
