--- a/extensions.json
+++ b/extensions.json
@@ -1,4 +1,8 @@
 {
+  "name": "erlangls",
+  "publisher": "erlang-ls",
+  "repositoryUrl": "https://github.com/erlang-ls/vscode_erlang_ls"
+  },
   "$schema": "./extensions-schema.json",
   "13xforever.language-x86-64-assembly": {
     "repository": "https://github.com/13xforever/x86_64-assembly-vscode"
